# mnist-pytorch

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  poetry.toml  pyproject.toml
.github/workflows/: django.yml  test.yml  training-test.yaml  trivy.yml
api/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml  traefik.dev.toml  traefik.prod.toml
api/api/: asgi.py  settings.py  urls.py  wsgi.py
api/core/: admin.py  apps.py  models.py  prediction.py  urls.py  views.py
api/core/migrations/: 0001_initial.py
api/scripts/: setup.sh  start-server.sh
api/src/api/: log_filters.py  settings.py
api/src/core/: admin.py  models.py  prediction.py  serializers.py  views.py
api/src/core/migrations/: 0001_initial.py
api/static/: staticfiles.json
mnist_pytorch/: config.py  main.py
mnist_pytorch/api/: manage.py
mnist_pytorch/api/api/: settings.py  urls.py
mnist_pytorch/api/authentication/: apps.py  models.py  urls.py  views.py
mnist_pytorch/api/core/: models.py  prediction.py  serializers.py  urls.py  views.py
mnist_pytorch/api/core/migrations/: 0001_initial.py
mnist_pytorch/model/: callbacks.py  cnn.py  datamodule.py  training.py  utils.py
models/: cnn.py  datamodule.py  metrics.py  training.py
tests/: training_test.py
